--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <input type="text" id="input1" placeholder="Value 1" />
       <input type="text" id="input2" placeholder="Value 2" />
       <div class="btns-container">
-        <button class="btns" onclick="">Addition</button>
-        <button class="btns" onclick="">Substract</button>
-        <button class="btns" onclick="">Multiplay</button>
-        <button class="btns" onclick="">Division</button>
-        <button class="btns" onclick="" id="reset">Reset</button>
+        <button class="btns" onclick="add()">Addition</button>
+        <button class="btns" onclick="sub()">Substract</button>
+        <button class="btns" onclick="mul()">Multiplay</button>
+        <button class="btns" onclick="div()">Division</button>
+        <button class="btns" onclick="reset()" id="reset">Reset</button>
       </div>
     </div>
     <footer>
